# simple-renderer

./: .gitignore  CMakeLists.txt  run_all.sh
include/: camera.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  triangle.hpp  utils.hpp
include/accel/: aabb.hpp  bvh.hpp
include/material/: material.hpp  material_cook_torrance.hpp  material_glass.hpp  material_lambert.hpp  material_light.hpp  material_modified_phong.hpp  material_phong.hpp  material_reflective.hpp  material_refractive.hpp  material_utils.hpp
include/objects/: group.hpp  mesh.hpp  object3d.hpp  plane.hpp  sphere.hpp  transform.hpp  triangle.hpp
include/sampler/: sampler.hpp  sampler_cook_torrance.hpp  sampler_cosine_weighted.hpp  sampler_glass.hpp  sampler_header.h  sampler_modified_phong.hpp  sampler_reflective.hpp  sampler_refractive.hpp  sampler_uniform.hpp
output/mis_test/mis_test_variance/: calc_variance.py
report/: conf.typ  report.typ
src/: main.cpp  main_pathtracing.cpp  main_whitted.cpp  mesh.cpp  scene_parser.cpp
src/shader/: shader_mis.cpp  shader_naive.cpp  shader_nee.cpp  shader_whitted.cpp
testcases/: checkerboard_one_ball.txt  checkerboard_two_balls.txt  cornell_box.txt  cornell_box_balls.txt  cornell_box_bunny.txt  cornell_box_cow.txt  cornell_box_cow_and_bunny.txt  cornell_box_dof.txt  cornell_box_five_balls.txt  cornell_box_reflection_refraction.txt  cornell_box_texture.txt  cornell_box_three_balls.txt  cornell_box_three_balls_one_glass.txt  go.txt  mc_CMP_whitted_cornell_box_three_balls_one_glass.txt  mis_test.txt  no_fresnel_CMP_checkerboard_one_ball.txt  whitted_cornell_box_five_balls.txt  whitted_cornell_box_three_balls_one_glass.txt
