CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(final CXX)

set(CMAKE_BUILD_TYPE Debug)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

ADD_SUBDIRECTORY(deps/vecmath)
ADD_SUBDIRECTORY(deps/tinyobjloader)
ADD_SUBDIRECTORY(deps/stb)

FILE(GLOB SOURCES src/*.cpp)
FILE(GLOB INCLUDES include/*.hpp)

SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fopenmp")

############################################
############################################

SET(WHITTED_SOURCES ${SOURCES})
LIST(REMOVE_ITEM WHITTED_SOURCES ${CMAKE_SOURCE_DIR}/src/main_pathtracing.cpp)
ADD_EXECUTABLE(whitted ${WHITTED_SOURCES} ${INCLUDES})
TARGET_LINK_LIBRARIES(whitted vecmath)
TARGET_LINK_LIBRARIES(whitted tinyobjloader)
TARGET_LINK_LIBRARIES(whitted stb)
TARGET_INCLUDE_DIRECTORIES(whitted PRIVATE include)

SET(PATHTRACING_SOURCES ${SOURCES})
LIST(REMOVE_ITEM PATHTRACING_SOURCES ${CMAKE_SOURCE_DIR}/src/main_whitted.cpp)
ADD_EXECUTABLE(pathtracing ${PATHTRACING_SOURCES} ${INCLUDES})
TARGET_LINK_LIBRARIES(pathtracing vecmath)
TARGET_LINK_LIBRARIES(pathtracing tinyobjloader)
TARGET_LINK_LIBRARIES(pathtracing stb)
TARGET_INCLUDE_DIRECTORIES(pathtracing PRIVATE include)
